fix wrap positioning

--- a/src/main/resources/static/css/stats.css
+++ b/src/main/resources/static/css/stats.css
@@ -55,7 +55,6 @@ body {
 .wrap {
   width: 900px;
   margin: auto;
-  margin-top: 2vh;
 }
 
 .main-box {
